<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/web"
        android:layout_width="334dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickWeb"
        android:text="@string/web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cont" />

    <Button
        android:id="@+id/cont"
        android:layout_width="334dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickCont"
        android:text="@string/contatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="334dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickCall"
        android:text="@string/call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/web" />

    <Button
        android:id="@+id/maps1"
        android:layout_width="334dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickMap1"
        android:text="@string/maps1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/maps2"
        android:layout_width="334dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickMap2"
        android:text="@string/maps2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maps1" />

    <Button
        android:id="@+id/maps3"
        android:layout_width="334dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickMap3"
        android:text="@string/maps3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maps2" />

    <Button
        android:id="@+id/pic"
        android:layout_width="334dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickPrint"
        android:text="@string/pic_iti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maps3" />

    <TextView
        android:id="@+id/nome"
        android:layout_width="117dp"
        android:layout_height="34dp"
        android:layout_marginTop="116dp"
        android:text="@string/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pic" />

    <TextView
        android:id="@+id/telefone"
        android:layout_width="117dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:text="@string/telefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="117dp"
        android:layout_height="34dp"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="20dp"
        android:text="@string/contato"
        app:layout_constraintBottom_toTopOf="@+id/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pic"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="196dp"
        android:layout_height="143dp"

        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="557dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>